<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item android:id="@+id/SettingTheme"
            android:title="@string/SettingTheme"/>
        <item android:id="@+id/Favorite"
            android:title="@string/favorite"
            android:icon="@drawable/ic_baseline_favorite_24_white"
            app:showAsAction="collapseActionView|ifRoom"/>
        <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_white_24px"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    </group>

</menu>