<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detail_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/detail_photo"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/detail_photo"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_name2"
        android:layout_toEndOf="@+id/detail_photo"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/detail_name2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detail_name2"
        app:layout_constraintTop_toBottomOf="@+id/detail_name2" />

    <TextView
        android:id="@+id/detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_photo"
        android:layout_alignStart="@+id/detail_photo"
        android:layout_marginTop="8dp"
        android:text="@string/followers"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_photo" />

    <TextView
        android:id="@+id/detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_photo"
        android:layout_alignStart="@+id/detail_photo"
        android:layout_marginStart="6dp"
        android:text="@string/following"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/detail_followers"
        app:layout_constraintTop_toTopOf="@+id/detail_followers" />

    <TextView
        android:id="@+id/detail_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_photo"
        android:layout_alignStart="@+id/detail_photo"
        android:layout_marginStart="6dp"
        android:text="@string/repository"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/detail_following"
        app:layout_constraintTop_toTopOf="@+id/detail_followers" />

    <TextView
        android:id="@+id/detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_followers"
        android:layout_alignStart="@+id/detail_photo"
        android:layout_marginTop="8dp"
        android:text="@string/company"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/detail_followers"
        app:layout_constraintTop_toBottomOf="@+id/detail_followers" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_company"
        android:layout_alignStart="@+id/detail_company"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/detail_company"
        app:layout_constraintTop_toBottomOf="@+id/detail_company" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_location"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_shadow_end_color"
        app:layout_constraintTop_toBottomOf="@+id/detail_location"
        app:tabTextColor="@android:color/black"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/cardview_shadow_end_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        tools:layout_editor_absoluteX="16dp">

    </androidx.viewpager2.widget.ViewPager2>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/label_add_favorite"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>