<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_end_color"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tv_item_caption_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="#546E7A"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_username"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_username"
            tools:text="@string/captioncompany" />

        <TextView
            android:id="@+id/tv_item_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="#546E7A"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_username"
            card_view:layout_constraintStart_toEndOf="@+id/tv_item_caption_company"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_username"
            tools:text="@string/no_data" />

        <TextView
            android:id="@+id/tv_item_caption_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="#546E7A"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_caption_company"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_caption_company"
            tools:text="@string/captionlocation" />

        <TextView
            android:id="@+id/tv_item_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="#546E7A"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_company"
            card_view:layout_constraintStart_toEndOf="@+id/tv_item_caption_location"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_company"
            tools:text="@string/no_data" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>